--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "rehype-raw": "^7.0.0",
     "sort-by": "^1.2.0"
   },
